--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="twitter:title" content="05:13 ⇆ㅤ❚❚ㅤ▶️ ⏭ 🔈───●────────↻ 36:18" />
                                       <meta property="og:description" content="05:13 ⇆ㅤ❚❚ㅤ▶️ ⏭ 🔈───●────────↻ 36:18" />
 <meta property="twitter:description" content="05:13 ⇆ㅤ❚❚ㅤ▶️ ⏭ 🔈───●────────↻ 36:18" />
-                                      <meta property="og:image" content="https://tumerode.web.app/newsee.svg"/>
+                                      <meta property="og:image" content="https://github.com/shootabhag/lizamegsha/blob/main/586107512_122106425043090858_722631375946611188_n.svg"/>
     
 
 <link href='https://www.blogger.com/static/v1/widgets/2549344219-widget_css_bundle.css' rel='stylesheet' type='text/css'/>
