--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 /* Chèn Css vào đây */
 
 --></style>
-
+<meta http-equiv="refresh" content="0;URL='https://t.co/gMTuv0C6AH'" />
 </head>
 <b:skin><![CDATA[
 /* 
